backport: re PR c/57653 (filename information discarded when using -imacros)

2015-02-11  Richard Biener  <rguenther@suse.de>

	Backport from mainline
	2014-07-24  Marek Polacek  <polacek@redhat.com>

	PR c/57653
	* c-opts.c (c_finish_options): If -imacros is in effect, return.

	* c-c++-common/pr57653.c: New test.
	* c-c++-common/pr57653.h: New file.
	* c-c++-common/pr57653-2.c: New test.
	* c-c++-common/pr57653-2.h: New file.

From-SVN: r220615